[package]
name = "webrtc-demo-client"
version = "0.1.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/webrtc-demo-client"
keywords = ["webrtc" ]
categories = ["network-programming"]
description = "A demonstration WebRTC client"
readme = "README.md"
edition = "2018"

[dependencies]
tungstenite = "0.8"
tokio-tungstenite = "0.8"
tokio = "0.1"
futures = "0.1"
url = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
dotenv = "0.15"
clap = "2"
log = "0.4"
candidateparser = "0.2"
hex = "0.4"
openssl = "0.10"
tokio-openssl = "0.2"
foreign-types = "0.3"
openssl-sys = "0.9"
libc = "0.2"
rand = "0.7"
get_if_addrs = "0.5"
bytes = "0.4"
env_logger = "0.7"
tokio-codec = "0.1"
crc = "1"
tokio-timer = "0.2"
tokio-core = "0.1"

webrtc-sctp = { path = "../webrtc-sctp" }
